--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "learning",
+  "name": "react_poc",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-pdf-viewer/core": "^3.12.0",
-    "cra-template": "1.2.0",
-    "file-saver": "^2.0.5",
-    "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^2.16.105",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-pdf": "^9.2.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4"
+    "@contentful/rich-text-react-renderer": "^15.22.9",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "contentful": "^10.15.0",
+    "markdown-to-jsx": "^7.5.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.12",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -39,6 +43,16 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.0",
+    "gh-pages": "^6.1.1"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js, jsx, ts, tsx}",
+      "!src/index.js",
+      "!src/reportWebVitals.js"
+    ]
   }
 }
