--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.22.9",
     "@emailjs/browser": "^4.4.1",
+    "@netlify/blobs": "^8.1.1",
+    "@netlify/functions": "^3.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
